# action-item-graph

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  Procfile  README.md  REQUIREMENTS.md  TODOS.md  input_payload_schema.json  pyproject.toml  requirements.txt  run_live_test.py
docs/: API.md  DEAL_SERVICE_ARCHITECTURE.md  DEAL_SERVICE_IMPLEMENTATION_PLAN.md  EVENT_CONSUMER_ARCHITECTURE.md  EVENT_PUBLISHING_GUIDE.md  GRAPHITI_REFERENCE.md  GRAPH_INTEGRATION_PLAN.md  GRAPH_INTEGRATION_PROPOSAL.md  LIVE_E2E_TEST_RESULTS.md  PHASE7_TOPIC_GROUPING.md  PIPELINE_GUIDE.md  PROD-RLS-INVARIANT.md  SMOKE_TEST_GUIDE.md  test-data-report.md
examples/: investigate_matching.py  process_transcript.py  run_transcript_tests.py
infra/: Pulumi.eq-prod.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  forwarder.py  requirements.txt
migrations/: 001_add_scoring_columns.sql
scripts/: package_lambda.sh  run_live_e2e.py
tests/: __init__.py  conftest.py  test_action_item_workflow.py  test_api_auth.py  test_api_config.py  test_api_health.py  test_api_main.py  test_api_process.py  test_compatibility_process_route.py  test_concurrent_pipelines.py  test_consolidator.py  test_contact_ops.py  test_contact_prompt_formatting.py  test_deal_extraction.py  test_deal_matcher.py  test_deal_merger.py  test_deal_neo4j_client.py  test_deal_pipeline.py  test_deal_pipeline_postgres.py  test_deal_postgres_client.py  test_deal_repository.py  test_deal_workflow.py  test_dispatcher.py  test_duplicate_text.py  test_envelope_enums.py  test_errors.py  test_event_publisher.py  (+30 more)
(+90 files in other folders)
